--- a/Secret_project/ebooks.html
+++ b/Secret_project/ebooks.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Ebooks</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 
@@ -20,7 +20,25 @@
         </nav>
     </header>
     <section>
-
+        <h2>Confira nossos e-books para desenvolverdor web disponíveis:</h2>
+        <div class="book-list">
+            <div class="book">
+                <h3>E-book 1</h3>
+                <p>Descrição do e-book 1.</p>
+                <button>Comprar</button>
+            </div>
+            <div class="book">
+                <h3>E-book 2</h3>
+                <p>Descrição do e-book 2.</p>
+                <button>Comprar</button>
+            </div>
+            <div class="book">
+                <h3>E-book 3</h3>
+                <p>Descrição do e-book 3.</p>
+                <button>Comprar</button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
