--- a/Secret_project/paginicial.html
+++ b/Secret_project/paginicial.html
@@ -22,5 +22,16 @@
     <section>
 
 </body>
-
+<footer>
+	<p>&copy;2023 - Todos os direitos reservados</p>
+	<p>Entre em contato pelo e-mail: rafa_henrique2012@hotmail.com</p>
+	<nav>
+		<ul>
+			<li><a href="#">Termos de uso</a></li>
+			<li><a href="#">Política de privacidade</a></li>
+			<li><a href="#">Sobre nós</a></li>
+            <li><a href="#">Contato</a></li>
+		</ul>
+	</nav>
+</footer>
 </html>
