--- a/Secret_project/paginicial.html
+++ b/Secret_project/paginicial.html
@@ -18,20 +18,12 @@
                 <li><a class="cabecalho__menu_link" href="sobre.html">Sobre</a></li>
             </ul>
         </nav>
+        <div class ="fundo_home">
+            <img url ="https://i.pinimg.com/564x/da/94/ea/da94ea0e85c102d1693bd995fae9ba93.jpg">
+        </div>
     </header>
     <section>
 
 </body>
-<footer>
-	<p>&copy;2023 - Todos os direitos reservados</p>
-	<p>Entre em contato pelo e-mail: rafa_henrique2012@hotmail.com</p>
-	<nav>
-		<ul>
-			<li><a href="#">Termos de uso</a></li>
-			<li><a href="#">Política de privacidade</a></li>
-			<li><a href="#">Sobre nós</a></li>
-            <li><a href="#">Contato</a></li>
-		</ul>
-	</nav>
-</footer>
+
 </html>
